tests/errors/float_arity.vt
fn main() { let x: float = 1.0; print(x.pow()); }
